tests/valid/v03_at_schedule.tsl
# VALID TEST 3: One-time AT schedule (no EVERY keyword)
# Tests: AT TIME schedule variant

TASK midnightSync {
    RUN "sync.sh"
    AT 00:00
}
